--- a/src/mlang/m_frontend/dune
+++ b/src/mlang/m_frontend/dune
@@ -3,3 +3,38 @@
 (menhir
  (modules mparser)
  (flags --explain))
+
+;; This section deals with the .messages file.
+
+;; The following rule generates "mParserMessages.ml" based on the source file
+;; "mParserMessages.messages". It requires the completeness check to have been
+;; performed first. (If desired, this check could be disabled.)
+
+(rule
+ (deps mParserMessages.check)
+ (action
+  (with-stdout-to
+   mParserMessages.ml
+   (run menhir %{dep:mparser.mly} --compile-errors
+     %{dep:mParserMessages.messages}))))
+
+;; This rule generates a file "mParserMessages.auto.messages" that contains a
+
+;; list of all error states. It is used by the completeness check.
+
+(rule
+ (with-stdout-to
+  mParserMessages.auto.messages
+  (run menhir %{dep:mparser.mly} --list-errors)))
+
+;; This rule implements the completeness check. It checks that every error
+;; state listed in the auto-generated file "mParserMessages.auto.messages"
+;; is also listed in the file "mParserMessages.messages" that is maintained
+;; by the programmer.
+
+(rule
+ (with-stdout-to
+  mParserMessages.check
+  (run menhir %{dep:mparser.mly} --compare-errors
+    %{dep:mParserMessages.auto.messages} --compare-errors
+    %{dep:mParserMessages.messages})))
