First iteration copying Mathieu's stuff -- WIP

--- a/src/mlang/m_frontend/dune
+++ b/src/mlang/m_frontend/dune
@@ -2,7 +2,7 @@
 
 (menhir
  (modules mparser)
- (flags --explain))
+ (flags --dump --explain --table))
 
 ;; This section deals with the .messages file.
 
